UV Image Editor overwrites Cycles materials #34978

Closed
opened 2013-04-14 05:14:41 +02:00 by Andrew Price · 12 comments

%%%I believe this was reported before, but I'm opening it again in hopes of further investigation.

- Operating System, Graphics card ---

Windows 7. 2x GTX 680s

- Blender version with error, and version that worked ---

Blender 2.66a

- Short description of error ---

The image editor overwrites the Cycles material's textures.

The UV Image Editor is linked to the material nodes, so if a new image is selected in the Image editor, it overwrites the texture in the cycles node setup.

This is bad for multiple reasons:

  • Artists often want to see the UV layout on a blank canvas but doing so deletes the image from their material nodes
  • Materials often have multiple textures. Deleting or overwriting textures unknowing, causes a constant frustration of finding the missing texture and correcting it.
  • When multiple UV layouts are in use, blender doesn't know which layout is for which texture and so can just overwrite everything
  • Confusing to new users who aren't sure why their material keeps rendering purple when previously it rendered fine.

I honestly think that the UV image editor should be completely separate to the Cycles material nodes, and not linked in any way. It just causes more problems than it solves. The image editor is often used by artist as a canvas to test and experiment layouts with textures. So having it overwrite materials is a frustrating and unnecessary annoyance.
I've heard from many other blender users like Reynante Martinez who have the same thing.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---
  1. UV unwrap a cube
  2. Assign a material with a texture in the node setup
  3. Delete the image from the UV image editor

The node setup will have deleted the image from the setup, which is not necessary what the user wanted.%%%

%%%I believe this was reported before, but I'm opening it again in hopes of further investigation. - Operating System, Graphics card --- Windows 7. 2x GTX 680s - Blender version with error, and version that worked --- Blender 2.66a - Short description of error --- The image editor overwrites the Cycles material's textures. The UV Image Editor is linked to the material nodes, so if a new image is selected in the Image editor, it overwrites the texture in the cycles node setup. This is bad for multiple reasons: - Artists often want to see the UV layout on a blank canvas but doing so deletes the image from their material nodes - Materials often have multiple textures. Deleting or overwriting textures unknowing, causes a constant frustration of finding the missing texture and correcting it. - When multiple UV layouts are in use, blender doesn't know which layout is for which texture and so can just overwrite everything - Confusing to new users who aren't sure why their material keeps rendering purple when previously it rendered fine. I honestly think that the UV image editor should be completely separate to the Cycles material nodes, and not linked in any way. It just causes more problems than it solves. The image editor is often used by artist as a canvas to test and experiment layouts with textures. So having it overwrite materials is a frustrating and unnecessary annoyance. I've heard from many other blender users like Reynante Martinez who have the same thing. - Steps for others to reproduce the error (preferably based on attached .blend file) --- 1. UV unwrap a cube 2. Assign a material with a texture in the node setup 3. Delete the image from the UV image editor The node setup will have deleted the image from the setup, which is not necessary what the user wanted.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%I've had the same problem many times too. It breaks cycles materials and makes working in the image editor a pain (while working in cycles).
Having the the texture-nodes linked to the image editor creates more problems then it solves
I'm guessing that the reason it was rejected the first time was because this is technically not a bug, just a different behavior..
But yeah, I support this one! %%%

%%%I've had the same problem many times too. It breaks cycles materials and makes working in the image editor a pain (while working in cycles). Having the the texture-nodes linked to the image editor creates more problems then it solves I'm guessing that the reason it was rejected the first time was because this is technically not a bug, just a different behavior.. But yeah, I support this one! %%%

%%%Brecht, what's your opinion here?%%%

%%%Brecht, what's your opinion here?%%%

%%%Ok, I've removed this system now, the image displayed in the image editor is now completely decoupled from the material. That's not ideal either I think but probably the lesser of two evils, I haven't found a better solution yet.%%%

%%%Ok, I've removed this system now, the image displayed in the image editor is now completely decoupled from the material. That's not ideal either I think but probably the lesser of two evils, I haven't found a better solution yet.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

%%%That's perfect Brecht! Thank you!
Leaving it as completely unlinked to the material will be just perfect. As Kjartan said, having it linked just causes more problems than it fixes.

So I honestly think it's just better to just keep them separate, as it has been in the past.

Anyway, thanks so mate. To me this is the most excited bug fix in ages! :)%%%

%%%That's perfect Brecht! Thank you! Leaving it as completely unlinked to the material will be just perfect. As Kjartan said, having it linked just causes more problems than it fixes. So I honestly think it's just better to just keep them separate, as it has been in the past. Anyway, thanks so mate. To me this is the most excited bug fix in ages! :)%%%

Added subscriber: @RomboutVersluijs

Added subscriber: @RomboutVersluijs

I bumped into this cause i found the other method working finer. When i go into edit mode i want to see how the uv is on the texture. Now each time i want to edit or redo something i first need to check which texture it was. Therefor you also need to have the compositor open, so more space is lost, ofcourse we can [space] to focus a window. I yet find the method of relinking a texture each and every time again very double.

Why cant it be linked without being influential to a material. I mean it can be linked to a node as a copy. BI it can be linked without any influence or is this cause the materials work different on a mesh when rendered.

I bumped into this cause i found the other method working finer. When i go into edit mode i want to see how the uv is on the texture. Now each time i want to edit or redo something i first need to check which texture it was. Therefor you also need to have the compositor open, so more space is lost, ofcourse we can [space] to focus a window. I yet find the method of relinking a texture each and every time again very double. Why cant it be linked without being influential to a material. I mean it can be linked to a node as a copy. BI it can be linked without any influence or is this cause the materials work different on a mesh when rendered.

Such questions better be asked at bf-funboard mailing list, not in the bug tracking system.

Such questions better be asked at bf-funboard mailing list, not in the bug tracking system.

Added subscriber: @angabriel

Added subscriber: @angabriel

Hi brecht. Even in 2017 me and some others stumble over this behaviour and I want to try another solution myself. I am an experienced software developer, though never done anything in blender sourcecode so far.

Can you lead me in the right direction which parts you changed back in 2013? I cannot find your commit. Maybe you have a patch flying around?

That would help a lot, thank you in advance

Hi brecht. Even in 2017 me and some others stumble over this behaviour and I want to try another solution myself. I am an experienced software developer, though never done anything in blender sourcecode so far. Can you lead me in the right direction which parts you changed back in 2013? I cannot find your commit. Maybe you have a patch flying around? That would help a lot, thank you in advance

It was commit ceb61eb14.

Maybe the right solution is to make it linked again, but communicating it better in the image editor header that changing the image means editing the material, showing the material icon or name.

It was commit ceb61eb14. Maybe the right solution is to make it linked again, but communicating it better in the image editor header that changing the image means editing the material, showing the material icon or name.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34978
No description provided.