Fix #34978: for cycles, images displayed in the UV editor where coupled to the active image texture node in the material, now this is removed and the image in the image editor is decoupled and not changed upon entering edit mode.

This system caused more confusion then it's worth, changing or removing textures
would modify the material but users would often not be aware of this.